--- a/index.html
+++ b/index.html
@@ -1,90 +1,219 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progate</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+<link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<title>Sample index</title>
 </head>
+
 <body>
-  <header>
-    <div class="container">
-      <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
-      </div>
-      <span class="fa fa-bars menu-icon"></span>
-      <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
-      </div>
-    </div>
-  </header>
-  <div class="top-wrapper">
-    <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
-      <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
-      </div>
-    </div>
-  </div>
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
-      </div>
-      <div class="lessons">
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
-          </div>
-          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
-          </div>
-          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
-          </div>
-          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
-          </div>
-          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
-        </div>
-      </div>
-      <div class="clear"></div>
-    </div>
-  </div>
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
-      </div>
-      <span class="btn message">さっそく開発する</span>
-    </div>
-  </div>
-  <footer>
-    <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
-    </div>
-  </footer>
+
+
+<div class="base"><!-- ページレイアウト -->
+
+
+<div class="box" id="top"><!-- 左右ボックス格納 -->
+
+
+<div class="menu"><!-- サイドボックス -->
+
+
+<div class="header"><!-- ヘッダー -->
+
+<h1>Website title（サイト名）</h1>
+<h2>サイトの説明</h2>
+
+</div><!-- ヘッダー：終わり -->
+
+
+<ul class="list1">
+<li><a href="novel.html">Main</a></li>
+<li><a href="novel.html">Novel</a></li>
+<li><a href="https://twitter.com">Twitter</a></li>
+<li><a href="mailto:xxxxx@xxx">Mail</a></li>
+<li><a href="#info">Info</a></li>
+<li><a href="#about">About</a></li>
+<li><a href="#link">Link</a></li>
+</ul>
+
+</div><!-- サイドボックス：終わり -->
+
+
+<div class="work"><!-- メインボックス -->
+
+<h3>カラーサンプル(Color Sample)</h3>
+<h4>カラーサンプル(Color Sample)</h4>
+<h5><a href="../red/index.html">Red</a>--<a href="../blue/index.html">Blue</a>--<a href="../purple/index.html">Purple</a>--<a href="../grey/index.html">Grey</a></h5>
+<p class="p3">画像なし。2カラム。タイトル＆メニュー左固定。800px以下～1カラム。タイトル＆メニュー上固定。</p>
+<hr class="hr3">
+
+<h3>Novels（小説）</h3>
+<h4>作品タイトル1</h4>
+<h5><a href="novel.html">01</a>--02--03--04--05</h5>
+<br><!-- 改行タグ -->
+<h4><a href="novel.html">シンデレラ</a></h4>
+<h5><a href="novel.html">01</a>-02-03-04-05</h5>
+<p class="p1">ジャンル。長さ。作品の説明。更新日。</p>
+
+<hr class="hr3">
+
+<h3>Novels（小説）</h3>
+<dl class="dl1"> 
+<dt class="dt1">作品タイトル2</dt>
+<dd class="dd1"><a href="novel.html">01</a>--02--03--04--05</dd>
+</dl>
+
+<dl class="dl1">
+<dt class="dt1"><a href="novel.html">シンデレラ</a></dt>
+<dd class="dd1">ジャンル。長さ。作品の説明。更新日。</dd>
+</dl>
+
+<div class="mark" id="info"></div>
+<hr class="hr3">
+
+<h3>Information</h3>
+<div class="memo">
+.memo<br>
+お知らせ・更新履歴などに。<br>
+高さが100pxを超えると、スクロールになります。<br>
+20xx/5/1　○○○更新<br>
+20xx年13月88日　○○○更新<br>
+サンプル<br>
+サンプル<br>
+Sample text<br>
+</div>
+
+
+<div class="mark"id="about"></div>
+<hr class="hr3">
+
+
+<h3>About Link</h3>
+<h4>当サイトへのリンクについて</h4>
+<h6>リンクはご自由にどうぞ。同ジャンルサイト様のみリンクOK。検索避け対策済サイト様のみリンク可。</h6>
+<dl class="dl1"> 
+<dt class="dt1">About Link</dt>
+<dd class="dd1"><img src="banner.png" alt="リンクバナー" width="88" height="31" class="img1"></dd>
+<dd class="dd1">・サイト名○○○</dd>
+<dd class="dd1">・管理人名◎◎◎</dd>
+<dd class="dd1">・URL http://www......</dd>
+</dl>
+
+<div class="mark" id="link"></div>
+<hr class="hr3">
+
+<h3>Links（リンク集）</h3>
+<h4>Bookmark（お気に入りサイト）</h4>
+<h5>Site Name/Site Name/Site Name/Site Name/Site Name/</h5>
+
+<dl class="dl1"> 
+<dt class="dt1">Links（リンク集）</dt>
+<dd class="dd1"><img src="banner.png" alt="リンクバナー" width="88" height="31" class="img1">お気に入り。素敵なサイト様です。</dd>
+<dd class="dd1"><img src="banner.png" alt="リンクバナー" width="88" height="31" class="img1">お気に入り。素敵なサイト様です。</dd>
+</dl>
+
+<hr class="hr3">
+
+<h3>↓サンプルタグ↓</h3>
+
+<h1>h1 見出し1</h1>
+<h2>h2 見出し2</h2>
+<h3>h3 見出し3</h3>
+<h4>h4 見出し4</h4>
+<h5>h5 見出し5</h5>
+<h6>h6 見出し6</h6>
+
+<b>b 太字</b>
+<i>i 斜体</i>
+<em>em 強調</em>
+<strong>strong 重要</strong>
+<s>s 取消</s>
+<u>u 追加</u>
+<small>small 文字を小さく</small>
+
+<a href="index.html">a href テキストリンク</a>
+
+<blockquote>blockquote 引用文 blockquote 引用文 blockquote 引用文</blockquote>
+
+<li>li リスト1</li>
+<li>li リスト2</li>
+<li>li リスト3</li>
+
+<ul class="list1">
+<li>ul class="list1"<br>リスト1</li>
+<li>リスト2</li>
+<li>リスト3</li>
+</ul>
+
+<ol class="list2">
+<li>ol class="list2"<br>番号付きリスト1</li>
+<li>番号付きリスト2</li>
+<li>番号付きリスト3</li>
+</ol>
+
+<dl class="dl1"> 
+<dt class="dt1">dt class="dt1" 定義リスト （class="dl1"定義の範囲）</dt>
+<dd class="dd1">dd class="dd1" 定義の説明 定義の説明</dd>
+</dl>
+
+↓hr class="hr1" ライン↓
+<hr class="hr1">
+
+<br>
+↓hr class="hr2" ライン↓
+<hr class="hr2">
+
+<br>
+↓hr class="hr3" ライン↓（ボーダ無。隙間が欲しい時の調整用）
+<hr class="hr3">
+
+<p class="p1">p class="p1" サンプルテキスト。段落・文章をまとめたいときに。枠無し。</p>
+
+<p class="p2">p class="p2" サンプルテキスト。段落・文章をまとめたいときに。二重線枠。</p>
+
+<p class="p3">p class="p3" サンプルテキスト。段落・文章をまとめたいときに。点線枠。</p>
+
+<br>
+<div class="memo">
+.memo<br>
+お知らせ・更新履歴などに。<br>
+高さが100pxを超えると、スクロールになります。<br>
+サンプル<br>
+サンプル<br>
+サンプル<br>
+サンプル<br>
+</div>
+
+<br>↓img class="img1"↓<br>
+<img src="banner.png" alt="リンクバナー" width="88" height="31" class="img1">
+
+<h4>counter</h4>
+<h2><div class="counter" align="center">0123456789</div></h2>
+
+<hr class="hr3">
+
+<a href="#top" class="pagetop"><img src="top.png" alt="Page Top"></a><!-- ページトップに戻る -->
+
+<div class="footer"><!-- フッター -->
+
+<address>
+Copyright&copy; 20xx your name All rights reserved.<!--著作権表示-->&nbsp;&#9752;
+<cite>designed by <a href="https://fc.ashrose.net/" target="_top">flower&amp;clover</a></cite>
+</address>
+
+</div><!-- フッター：終わり -->
+
+
+</div><!-- メインボックス：終わり -->
+
+
+</div><!-- 左右ボックス格納：終わり -->
+
+
+</div><!-- ページレイアウト：終わり -->
+
+
 </body>
 </html>
