--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <div class="header"><!-- ヘッダー -->
 
-<h1>Website title（サイト名）</h1>
-<h2>サイトの説明</h2>
+<h1>Profile</h1>
+<h2></h2>
 
 </div><!-- ヘッダー：終わり -->
 
@@ -32,7 +32,7 @@
 <li><a href="novel.html">Main</a></li>
 <li><a href="novel.html">Novel</a></li>
 <li><a href="https://twitter.com">Twitter</a></li>
-<li><a href="mailto:xxxxx@xxx">Mail</a></li>
+<li><a href="mailto:234062298@qq.com">Mail</a></li>
 <li><a href="#info">Info</a></li>
 <li><a href="#about">About</a></li>
 <li><a href="#link">Link</a></li>
@@ -43,31 +43,22 @@
 
 <div class="work"><!-- メインボックス -->
 
-<h3>カラーサンプル(Color Sample)</h3>
-<h4>カラーサンプル(Color Sample)</h4>
-<h5><a href="../red/index.html">Red</a>--<a href="../blue/index.html">Blue</a>--<a href="../purple/index.html">Purple</a>--<a href="../grey/index.html">Grey</a></h5>
-<p class="p3">画像なし。2カラム。タイトル＆メニュー左固定。800px以下～1カラム。タイトル＆メニュー上固定。</p>
-<hr class="hr3">
-
-<h3>Novels（小説）</h3>
-<h4>作品タイトル1</h4>
-<h5><a href="novel.html">01</a>--02--03--04--05</h5>
 <br><!-- 改行タグ -->
-<h4><a href="novel.html">シンデレラ</a></h4>
+<h4><a href="novel.html">経歴</a></h4>
 <h5><a href="novel.html">01</a>-02-03-04-05</h5>
-<p class="p1">ジャンル。長さ。作品の説明。更新日。</p>
+<p class="p1">経歴リスト</p>
 
 <hr class="hr3">
 
-<h3>Novels（小説）</h3>
+<h3>実績</h3>
 <dl class="dl1"> 
 <dt class="dt1">作品タイトル2</dt>
 <dd class="dd1"><a href="novel.html">01</a>--02--03--04--05</dd>
 </dl>
 
 <dl class="dl1">
-<dt class="dt1"><a href="novel.html">シンデレラ</a></dt>
-<dd class="dd1">ジャンル。長さ。作品の説明。更新日。</dd>
+<dt class="dt1"><a href="novel.html">実績/a></dt>
+<dd class="dd1">実績リスト</dd>
 </dl>
 
 <div class="mark" id="info"></div>
