--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <html lang="en-gb" class="no-js">
 <!--<![endif]-->
 <head>
-<meta name="google-site-verification" content="Xg71Zc9FOPZ4PhqMLZLbOOhVipVWpWmikszi9QEkxVo" />ß
+<meta name="google-site-verification" content="Xg71Zc9FOPZ4PhqMLZLbOOhVipVWpWmikszi9QEkxVo" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <!--[if lt IE 9]> 
