--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-<title>表示させたいサイトの名前</title>
+<title>江戸川コナン探偵クラブ　</title>
 <meta name="description" content="">
 <meta name="author" content="WebThemez">
 <!--[if lt IE 9]>
@@ -62,7 +62,7 @@
     <div class="container banner-content">
       <div class="hero-text animated fadeInDownBig">
         <h1 class="responsive-headline" style="font-size: 40px;">スケートに関するconceptをここに</h1>
-        <p>xxxxxxxxxxxxxx <br/>
+        <p>google検索テスト：江戸川コナン探偵クラブ　スケート <br/>
           xxxxxxxxxxxxxxxxx</p>
       </div>
       
