--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
       </div>
       <div class="row mrgn30">
-        <form method="post" action="" id="contactfrm" role="form">
+        <form method="post" action="mailto:" id="contactfrm" role="form">
           <div class="col-sm-4">
             <div class="form-group">
               <label for="name">Name</label>
