--- a/index.html
+++ b/index.html
@@ -266,11 +266,15 @@
           </address>
           <h4>Line:</h4>
           <address>
-          QRko<br>
+          QRコード<br>
           </address>
           <h4>Phone:</h4>
           <address>
           XXX-XXXX-XXXX<br>
+          </address>
+	  <h4>メール</h4>
+          <address>
+　　　　　　　　　　　　　　　　　　　　  <a href="mailto:２３４０６２２９８＠qq.com">今すぐ問い合わせ</a>
           </address>
         </div>
       </div>
