--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           </address>
 	  <h4>メール</h4>
           <address>
-　　　　　　　　　　　　　　　　　　　　  <a href="mailto:２３４０６２２９８＠qq.com">今すぐ問い合わせ</a>
+　　　　　　　　　　　　　　　　　　　　  <a href="mailto:２３４０６２２９８＠qq.com"　enctype="text/plain">クリックして、すぐ問い合わせ</a>
           </address>
         </div>
       </div>
