--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           </address>
 	  <h4>メール</h4>
           <address>
-　　　　　　　　　　　　　　　　　　　　  <a href="mailto:lizhen.training＠gmail.com"　enctype="text/plain">クリックしてすぐ問い合わせ</a>
+　　　　　　　　　　　　　　　　　　　　  <a href="mailto:lizhen.training&#64;gmail.com">すぐ問い合わせ</a>
           </address>
         </div>
       </div>
