--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
       </div>
     </div>
   </div>
+</section>	
+<section id="reserve" >
+  <label class="date-edit"><input type="date" value="2019-08-22" /></label>
 </section>
 <section id="contactUs" class="contact-parlex">
   <div class="parlex-back">
