--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   </div>
 </section>	
 <section id="reserve" >
-  <label class="date-edit"><input type="date" value="2019-08-22" /></label>
+  <iframe src="https://calendar.google.com/calendar/embed?src=ja.japanese%23holiday%40group.v.calendar.google.com&ctz=Asia%2FTokyo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </section>
 <section id="contactUs" class="contact-parlex">
   <div class="parlex-back">
