--- a/index.html
+++ b/index.html
@@ -228,7 +228,11 @@
   </div>
 </section>	
 <section id="reserve" class="contact-parlex">
-  <iframe src="https://calendar.google.com/calendar/embed?src=ja.japanese%23holiday%40group.v.calendar.google.com&ctz=Asia%2FTokyo" style="border: 0" width="100%" height="2000" frameborder="0" scrolling="no"></iframe>
+  <div class="parlex-back">
+    <div class="container">
+      <iframe src="https://calendar.google.com/calendar/embed?src=ja.japanese%23holiday%40group.v.calendar.google.com&ctz=Asia%2FTokyo" style="border: 0" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+    </div>
+  </div>
 </section>
 <section id="contactUs" class="contact-parlex">
   <div class="parlex-back">
