--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <li><a href="#features" class="scroll-link">選手生涯</a></li>
           <li><a href="#選手育ち" class="scroll-link">インストラクター生涯</a></li>
           <li><a href="#portfolio" class="scroll-link">写真集</a></li>
+          <li><a href="#reserve" class="scroll-link">レッスン予約</a></li>
           <li><a href="#contactUs" class="scroll-link">問い合わせ</a></li>
         </ul>
       </div>
@@ -227,12 +228,16 @@
     </div>
   </div>
 </section>	
-<section id="reserve" class="contact-parlex">
-  <div class="parlex-back">
-    <div class="container">
-      <iframe src="https://calendar.google.com/calendar/embed?src=ja.japanese%23holiday%40group.v.calendar.google.com&ctz=Asia%2FTokyo" style="border: 0" width="100%" height="300%" frameborder="0" scrolling="no"></iframe>
+<section id="reserve" class="page-section">
+  <div class="container">
+    <div class="heading text-center"> 
+      <!-- Heading -->
+      <h2>
+        <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1Nf-fcy2LXAUfqDDPuWjotPckTrqmRPEioPC0Yb9L92eoPGEYtY_-xGKd1H4J3KCe1kE7Szawn">予約はこちらへ</a>
+      </h2>
+      <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FTokyo&showPrint=0&mode=MONTH&src=bGl6aGVuLnRyYWluaW5nQGdtYWlsLmNvbQ&color=%23F4511E" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
-  </div>
+    </div>
 </section>
 <section id="contactUs" class="contact-parlex">
   <div class="parlex-back">
@@ -279,9 +284,9 @@
           <address>
           XXX-XXXX-XXXX<br>
           </address>
-	  <h4>メール</h4>
+	        <h4>メール</h4>
           <address>
-　　　　　　　　　　　　　　　　　　　　  <a href="mailto:lizhen.training&#64;gmail.com">すぐ問い合わせ</a>
+　　　　　　  <a href="mailto:lizhen.training&#64;gmail.com">すぐ問い合わせ</a>
           </address>
         </div>
       </div>
@@ -290,7 +295,7 @@
   </div>
 </section>
 <section class="maps">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.1341965442252!2d139.91488965046003!3d35.698315136545766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018873d67153951%3A0xec8dc686d526d284!2z5rGf5oi45bed5Yy644K544Od44O844OE44Op44Oz44OJ!5e0!3m2!1sja!2sjp!4v1640224020630!5m2!1sja!2sjp" width="100%" height="650" frameborder="0"></iframe>
+  <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FTokyo&showPrint=0&src=c2thdGluZ2xlc3Nzb25yZXNlcnZlQGdtYWlsLmNvbQ&src=bGl6aGVuLnRyYWluaW5nQGdtYWlsLmNvbQ&color=%23039BE5&color=%23F4511E" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </section>
 <!--/.page-section-->
 <section class="copyright">
