--- a/index.html
+++ b/index.html
@@ -235,9 +235,11 @@
       <h2>
         <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1Nf-fcy2LXAUfqDDPuWjotPckTrqmRPEioPC0Yb9L92eoPGEYtY_-xGKd1H4J3KCe1kE7Szawn">予約はこちらへ</a>
       </h2>
-      <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FTokyo&showPrint=0&mode=MONTH&src=bGl6aGVuLnRyYWluaW5nQGdtYWlsLmNvbQ&color=%23F4511E" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+      <div id="calendar" class="google-calendar">
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FTokyo&showPrint=0&mode=MONTH&src=bGl6aGVuLnRyYWluaW5nQGdtYWlsLmNvbQ&color=%23F4511E" style="border:solid 1px #777" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+      </div>
     </div>
-    </div>
+  </div>
 </section>
 <section id="contactUs" class="contact-parlex">
   <div class="parlex-back">
