--- a/index.html
+++ b/index.html
@@ -282,14 +282,14 @@
           <address>
           QRコード<br>
           </address>
-          <h4>Phone:</h4>
+          <h4>
+            <a href="tel:07028026336">電話で今すぐ問い合わせ</a>
+          </h4>
           <address>
-          XXX-XXXX-XXXX<br>
           </address>
-	        <h4>メール</h4>
-          <address>
-　　　　　　  <a href="mailto:lizhen.training&#64;gmail.com">すぐ問い合わせ</a>
-          </address>
+          <h4>
+            <a href="mailto:lizhen.training&#64;gmail.com">メールで今すぐ問い合わせ</a>
+          </h4>
         </div>
       </div>
     </div>
@@ -297,7 +297,7 @@
   </div>
 </section>
 <section class="maps">
-  <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FTokyo&showPrint=0&src=c2thdGluZ2xlc3Nzb25yZXNlcnZlQGdtYWlsLmNvbQ&src=bGl6aGVuLnRyYWluaW5nQGdtYWlsLmNvbQ&color=%23039BE5&color=%23F4511E" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.1341965442252!2d139.91488965046003!3d35.698315136545766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018873d67153951%3A0xec8dc686d526d284!2z5rGf5oi45bed5Yy644K544Od44O844OE44Op44Oz44OJ!5e0!3m2!1sja!2sjp!4v1640224020630!5m2!1sja!2sjp" width="100%" height="650" frameborder="0"></iframe>
 </section>
 <!--/.page-section-->
 <section class="copyright">
