--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul class="nav navbar-nav" id="mainNav">
           <li class="active"><a href="#home" class="scroll-link">ホーム</a></li>
           <li><a href="#features" class="scroll-link">選手生涯</a></li>
-          <li><a href="#選手育ち" class="scroll-link">インストラクター生涯</a></li>
+          <li><a href="#選手育て" class="scroll-link">選手育て</a></li>
           <li><a href="#portfolio" class="scroll-link">写真集</a></li>
           <li><a href="#reserve" class="scroll-link">レッスン予約</a></li>
           <li><a href="#contactUs" class="scroll-link">問い合わせ</a></li>
@@ -98,24 +98,25 @@
           <li >YYYYMM〜YYYYMM XXXXXX</li>
           <li >YYYYMM〜YYYYMM XXXXXX</li>
           <li >YYYYMM〜YYYYMM XXXXXX</li>
-        </ul>      </div>
+        </ul>      
+      </div>
       <div class="six columns feature-media right"> <img src="images/feature-img-2.png" alt=""> </div>
     </div>
 </section>
-<section id="選手育ち" class="page-section darkBg pDark">
+<section id="選手育て" class="page-section darkBg pDark">
   <div class="container">
     <div class="heading text-center"> 
       <!-- Heading -->
-      <h2>選手育ち</h2>
+      <h2>選手育て</h2>
     </div>
     <div class="row">
       <div class="col-md-4 mcbook" data-animated="bounceInLeft"> <img src="images/macbook.png" class="fitImage" alt="img" /> </div>
       <div class="col-md-8">
         <ul>
-          <li >YYYYMM〜YYYYMM XXXXXX</li>
-          <li >YYYYMM〜YYYYMM XXXXXX</li>
-          <li >YYYYMM〜YYYYMM XXXXXX</li>
-          <li >YYYYMM〜YYYYMM XXXXXX</li>
+          <li class="list">YYYYMM〜YYYYMM XXXXXX</li>
+          <li class="list">YYYYMM〜YYYYMM XXXXXX</li>
+          <li class="list">YYYYMM〜YYYYMM XXXXXX</li>
+          <li class="list">YYYYMM〜YYYYMM XXXXXX</li>
         </ul>
       </div>
     </div>
@@ -255,41 +256,37 @@
         <form method="post" action="mailto:234062298@qq.com" id="contactfrm" role="form">
           <div class="col-sm-4">
             <div class="form-group">
-              <label for="name">Name</label>
+              <label for="name">お名前</label>
               <input type="text" class="form-control" name="name" id="name" placeholder="Enter name" title="Please enter your name (at least 2 characters)">
             </div>
             <div class="form-group">
-              <label for="email">Email</label>
+              <label for="email">連絡先メールアドレス</label>
               <input type="email" class="form-control" name="email" id="email" placeholder="Enter email" title="Please enter a valid email address">
             </div>
           </div>
           <div class="col-sm-4">
             <div class="form-group">
-              <label for="comments">Comments</label>
+              <label for="comments">コメント</label>
               <textarea name="comment" class="form-control" id="comments" cols="3" rows="5" placeholder="Enter your message…" title="Please enter your message (at least 10 characters)"></textarea>
             </div>
-            <button name="submit" type="submit" class="btn btn-lg btn-primary" id="submit">Submit</button>
+            <button name="submit" type="submit" class="btn btn-lg btn-primary" id="submit">送信</button>
             <div class="result"></div>
           </div>
         </form>
         <div class="col-sm-4">
-          <h4>Address:</h4>
+          <h4>アクセス</h4>
           <address>
-          江戸川スポーツランド<br>
-          住所<br>
+          東京都江戸川区東篠崎１－８－１<br>
           </address>
-          <h4>Line:</h4>
           <address>
-          QRコード<br>
-          </address>
-          <h4>
-            <a href="tel:07028026336">電話で今すぐ問い合わせ</a>
-          </h4>
+            <h4>
+              <a href="tel:07028026336">電話で問い合わせ</a>
+            </h4>
+            </address>  
+          <h4>Lineで問い合わせた</h4>
           <address>
+            <img src="images/lineQRcode.png" width="50%" height="50%"/><br>
           </address>
-          <h4>
-            <a href="mailto:lizhen.training&#64;gmail.com">メールで今すぐ問い合わせ</a>
-          </h4>
         </div>
       </div>
     </div>
