--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <div class="heading text-center"> 
       <!-- Heading -->
       <h2>
-        <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1Nf-fcy2LXAUfqDDPuWjotPckTrqmRPEioPC0Yb9L92eoPGEYtY_-xGKd1H4J3KCe1kE7Szawn">予約はこちらへ</a>
+        <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1Nf-fcy2LXAUfqDDPuWjotPckTrqmRPEioPC0Yb9L92eoPGEYtY_-xGKd1H4J3KCe1kE7Szawn">AA予約はこちらへ</a>
       </h2>
       <div id="calendar" class="google-calendar">
         <iframe src="https://calendar.google.com/calendar/embed?height=1200&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FTokyo&showNav=1&showPrint=0&showTabs=0&showCalendars=0&src=bGl6aGVuLnRyYWluaW5nQGdtYWlsLmNvbQ&color=%23039BE5" style="border:solid 1px #777" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
