--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="navbar-header">
         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a href="#" class="navbar-brand scroll-top logo"><b>自己アピール</b></a> </div>
+        <a href="#" class="navbar-brand scroll-top logo"><b>カッコいいsloganをここに</b></a> </div>
       <!--/.navbar-header-->
       <div id="main-nav" class="collapse navbar-collapse">
         <ul class="nav navbar-nav" id="mainNav">
           <li class="active"><a href="#home" class="scroll-link">ホーム</a></li>
-          <li><a href="#features" class="scroll-link">選手生涯</a></li>
+          <li><a href="#features" class="scroll-link">プロ生涯</a></li>
           <li><a href="#選手育て" class="scroll-link">選手育て</a></li>
           <li><a href="#portfolio" class="scroll-link">写真集</a></li>
           <li><a href="#reserve" class="scroll-link">レッスン予約</a></li>
@@ -75,12 +75,11 @@
 <section id="features" >
   <div class="container">
     <div class="heading text-center"> 
-      <h2>プロファイル</h2>
     </div>
     <div class="row feature design">
       <h2></h2>
       <div class="six columns right">
-        <h3></h3>
+        <h3>学生の頃</h3>
         <ul>
           <li >YYYYMM〜YYYYMM XXXXXX</li>
           <li >YYYYMM〜YYYYMM XXXXXX</li>
@@ -92,7 +91,7 @@
     </div>
     <div class="row feature responsive">
       <div class="six columns left">
-        <h3></h3>
+        <h3>社会人になってから</h3>
         <ul>
           <li >YYYYMM〜YYYYMM XXXXXX</li>
           <li >YYYYMM〜YYYYMM XXXXXX</li>
@@ -108,6 +107,7 @@
     <div class="heading text-center"> 
       <!-- Heading -->
       <h2>選手育て</h2>
+      <p>選手育てに関する思いを一言でここに記載</p>
     </div>
     <div class="row">
       <div class="col-md-4 mcbook" data-animated="bounceInLeft"> <img src="images/macbook.png" class="fitImage" alt="img" /> </div>
@@ -234,7 +234,7 @@
     <div class="heading text-center"> 
       <!-- Heading -->
       <h2>
-        <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1Nf-fcy2LXAUfqDDPuWjotPckTrqmRPEioPC0Yb9L92eoPGEYtY_-xGKd1H4J3KCe1kE7Szawn">AA予約はこちらへ</a>
+        <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1Nf-fcy2LXAUfqDDPuWjotPckTrqmRPEioPC0Yb9L92eoPGEYtY_-xGKd1H4J3KCe1kE7Szawn">予約はこちらへ</a>
       </h2>
       <div id="calendar" class="google-calendar">
         <iframe src="https://calendar.google.com/calendar/embed?height=1200&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FTokyo&showNav=1&showPrint=0&showTabs=0&showCalendars=0&src=bGl6aGVuLnRyYWluaW5nQGdtYWlsLmNvbQ&color=%23039BE5" style="border:solid 1px #777" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
@@ -251,13 +251,6 @@
     </div>
     <div class="col-md-12">
       <div class="row"> 
-        
-        <!-- item -->
-        <div class="col-md-3 text-center"> <i class="fa fa-arrows fa-2x circle"></i>
-          <h3>Address</h3>
-          <p>東京都江戸川区東篠崎1-8-1</p>
-        </div>
-        <!-- end: --> 
         
         <!-- item -->
         <div class="col-md-3 text-center"> <i class="fa fa-css3 fa-2x circle"></i>
@@ -278,6 +271,12 @@
           <h3>Mail</h3>
           <a href="mailto:lizhen.training&#64;gmail.com">すぐ問い合わせ</a>
           </div>
+        <!-- end: --> 
+        <!-- item -->
+        <div class="col-md-3 text-center"> <i class="fa fa-arrows fa-2x circle"></i>
+          <h3>Address</h3>
+            <p>東京都江戸川区東篠崎1-8-1</p>
+        </div>
         <!-- end: --> 
       </div>
     </div>
