--- a/index_with_course.html
+++ b/index_with_course.html
@@ -12,7 +12,7 @@
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-<title>xxxxx</title>
+<title>江戸川スポーツランドフィギュアスケートクラブ</title>
 <meta name="description" content="">
 <meta name="author" content="WebThemez">
 <!--[if lt IE 9]>
@@ -38,12 +38,12 @@
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="navbar-header">
         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a href="#" class="navbar-brand scroll-top logo"><b style="font-size: 30px;">xxxxxxxx</b></a> </div>
+        <a href="#" class="navbar-brand scroll-top logo"><b style="font-size: 30px;">氷の上で踊ってみませんか？</b></a> </div>
       <!--/.navbar-header-->
       <div id="main-nav" class="collapse navbar-collapse">
         <ul class="nav navbar-nav" id="mainNav">
           <li class="active"><a href="#home" class="scroll-link">ホーム</a></li>
-          <li><a href="#features" class="scroll-link">レッスン</a></li>
+          <li><a href="#features" class="scroll-link">コース</a></li>
           <li><a href="#contactUs" class="scroll-link">連絡先</a></li>
         </ul>
       </div>
@@ -59,8 +59,8 @@
   <div class="banner-container"> <img src="images/banner-bg.jpg" alt="banner" />
     <div class="container banner-content">
       <div class="hero-text animated fadeInDownBig">
-        <h1 class="responsive-headline" style="font-size: 40px;color:thistle;">XXXXXXXXXXXX</h1>
-        <p>xxxxxxxxxの基礎から親切丁寧に楽しく指導致します。</p>
+        <h1 class="responsive-headline" style="font-size: 40px;color:thistle;">江戸川スポーツランドフィギュアスケートクラブ</h1>
+        <p>フィギュアスケートの基礎から親切丁寧に楽しく指導致します。</p>
       </div>      
       <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
       <div class="hero-img"> <img src="images/homepage-1204-background-lapto.png" width="22%" height="22%" alt="" class="text-center animated fadeInUpBig"/></div>
@@ -72,23 +72,33 @@
     <div class="row feature design">
       <div class="three columns right">
         <div class="row flat">
-          <div class="col-lg-12 col-md-12 col-xs-12">
+          <div class="col-lg-6 col-md-9 col-xs-6">
             <ul class="plan plan1">
-              <li class="plan-name">レッスンについて </li>
-              <li style="text-align: left;"> <strong>レッスン対象：</strong> xxxxxxx </li>
-              <li style="text-align: left;"> <strong>レッスン内容：</strong> xxxxxxxxxxxxxxx</li>
-              <li style="text-align: left;"> <strong>参加する大会：</strong> xxxxxxx </li>
-              <li style="text-align: left;"> <strong>料金：</strong> xxxxxxxxx<br><br> </li>
-              <li class="plan-action"> <a href="mailto:lizhen.training&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
+              <li class="plan-name">選手コース </li>
+              <li> <strong>レッスン対象：</strong> 歳まで </li>
+              <li> <strong>レッスン内容：</strong> シングル全般 </li>
+              <li> <strong>参加する大会：</strong> 大会名 </li>
+              <li> <strong>料金：</strong> ¥3500/30分<br><br> </li>
+              <li class="plan-action"> <a href="mailto:mimichanskate&#64;gmail.com?subject=%E9%81%B8%E6%89%8B%E3%82%B3%E3%83%BC%E3%82%B9%E3%81%AE%E3%81%8A%E5%95%8F%E5%90%88%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
+            </ul>
+          </div>
+          <div class="col-lg-6 col-md-9 col-xs-6">
+            <ul class="plan plan1">
+              <li class="plan-name">趣味コース </li>
+              <li> <strong>レッスン対象：</strong> 70歳まで </li>
+              <li> <strong>レッスン内容：</strong> レベルに合わせた各種ステップ、スピン、ジャンプ </li>
+              <li> <strong>参加する大会：</strong> 大会名 </li>
+              <li> <strong>料金：</strong> ¥3500/30分 </li>
+              <li class="plan-action"> <a href="mailto:mimichanskate&#64;gmail.com?subject=%E8%B6%A3%E5%91%B3%E3%82%B3%E3%83%BC%E3%82%B9%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
             </ul>
           </div>
         </div>
       </div>
       <div class="four columns feature-media left"> 
-        <img src="images/feature-img-2.png" width="80%" height="10%" alt=""> 
-        <h4 style="text-align: auto;"></h4>
+        <img src="images/feature-img-1.png" width="80%" height="10%" alt=""> 
+        <h4 style="text-align: auto;">岩間 三恵</h4>
         <!-- Designation --> 
-        <span class="pos"></span>
+        <span class="pos">日本フィギュアスケートインストラクター協会所属</span>
     </div>
   </div>
 </section>
@@ -104,9 +114,9 @@
           <p></p>
         </div>
         <div style="text-align: center;">
-          <a href="https://www.edogawa-sportsland.com/" style="font-style: initial;color:lime;">xxxxxxx</a>
-          <h4 style="text-align: center;">住所:xxxxxxx</h4>
-          <h4 style="text-align: center;">メールアドレス:fffffff＠gmail.com</h4>
+          <a href="https://www.edogawa-sportsland.com/" style="font-style: initial;color:lime;">江戸川スポーツランド</a>
+          <h4 style="text-align: center;">住所:東京都江戸川区東篠崎1-8-1</h4>
+          <h4 style="text-align: center;">メールアドレス:mimichanskate＠gmail.com</h4>
         </div>
       </div>
     </div>
