--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="row feature design">
       <div class="three columns right">
         <div class="row flat">
-          <div class="col-lg-6 col-md-6 col-xs-12">
+          <div class="col-lg-6 col-md-6 col-xs-10">
             <ul class="plan plan1">
               <li class="plan-name">レッスンについて </li>
               <li style="text-align: left;"> <strong>レッスン対象：</strong> xxxxxxx </li>
@@ -86,10 +86,14 @@
         </div>
       </div>
       <div class="four columns feature-media left"> 
-        <img src="images/feature-img-2.png" width="80%" height="10%" alt=""> 
-        <h4 style="text-align: auto;"></h4>
-        <!-- Designation --> 
-        <span class="pos"></span>
+        <div class="row flat">
+          <div class="col-lg-12 col-md-12 col-xs-12">
+            <img src="images/feature-img-2.png" width="80%" height="10%" alt=""> 
+            <h4 style="text-align: auto;"></h4>
+            <!-- Designation --> 
+            <span class="pos"></span>
+          </div>
+      </div>
     </div>
   </div>
 </section>
