--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <div class="row feature design">
       <div class="three columns right">
         <div class="row flat">
-          <div class="col-lg-6 col-md-6 col-xs-10">
+          <div class="col-lg-10 col-md-6 col-xs-11">
             <ul class="plan plan1">
-              <li class="plan-name">レッスンについて </li>
+              <li class="plan-name">レッスン </li>
               <li style="text-align: left;"> <strong>レッスン対象：</strong> xxxxxxx </li>
               <li style="text-align: left;"> <strong>レッスン内容：</strong> xxxxxxxxxxxxxxx</li>
               <li style="text-align: left;"> <strong>参加する大会：</strong> xxxxxxx </li>
@@ -88,10 +88,10 @@
       <div class="four columns feature-media left"> 
         <div class="row flat">
           <div class="col-lg-12 col-md-12 col-xs-12">
-            <img src="images/feature-img-2.png" width="80%" height="10%" alt=""> 
-            <h4 style="text-align: auto;"></h4>
+            <img src="images/feature-img-1.png" width="80%" height="10%" alt=""> 
+            <h4 style="text-align: auto;">XX XX（XXX　XXX）</h4>
             <!-- Designation --> 
-            <span class="pos"></span>
+            <span class="pos">XXXXXXXXXXXXXXXXXXXーXXXX</span>
           </div>
       </div>
     </div>
