--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="row feature design">
       <div class="three columns right">
         <div class="row flat">
-          <div class="col-lg-10 col-md-6 col-xs-11">
+          <div class="col-lg-6 col-md-6 col-12">
             <ul class="plan plan1">
               <li class="plan-name">レッスン </li>
               <li style="text-align: left;"> <strong>レッスン対象：</strong> xxxxxxx </li>
@@ -87,8 +87,8 @@
       </div>
       <div class="four columns feature-media left"> 
         <div class="row flat">
-          <div class="col-lg-12 col-md-12 col-xs-12">
-            <img src="images/feature-img-1.png" width="80%" height="10%" alt=""> 
+          <div class="col-lg-6 col-md-6 col-12">
+            <img src="images/feature-img-1.png" alt=""> 
             <h4 style="text-align: auto;">XX XX（XXX　XXX）</h4>
             <!-- Designation --> 
             <span class="pos">XXXXXXXXXXXXXXXXXXXーXXXX</span>
