--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
     <div class="row feature design">
       <div class="three columns right">
         <div class="row flat">
-          <div class="col-lg-6 col-md-6 col-12">
+          <div class="col-lg-6 col-md-12 col-12">
+            <img src="images/feature-img-1.png" width="50%" alt=""> 
+            <h4 style="text-align: auto;">XX XX（XXX　XXX）</h4>
+            <!-- Designation --> 
+            <span class="pos">XXXXXXXXXXXXXXXXXXXーXXXX</span>
+          </div>
+          <div class="col-lg-6 col-md-12 col-12">
             <ul class="plan plan1">
               <li class="plan-name">レッスン </li>
               <li style="text-align: left;"> <strong>レッスン対象：</strong> xxxxxxx </li>
@@ -85,16 +91,6 @@
           </div>
         </div>
       </div>
-      <div class="four columns feature-media left"> 
-        <div class="row flat">
-          <div class="col-lg-6 col-md-6 col-12">
-            <img src="images/feature-img-1.png" alt=""> 
-            <h4 style="text-align: auto;">XX XX（XXX　XXX）</h4>
-            <!-- Designation --> 
-            <span class="pos">XXXXXXXXXXXXXXXXXXXーXXXX</span>
-          </div>
-      </div>
-    </div>
   </div>
 </section>
 
