--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <section id="features">
   <div class="container">
     <div class="row feature design">
-      <div class="three columns right">
+      <div class="three columns">
         <div class="row flat">
           <div class="col-lg-6 col-md-12 col-12">
             <img src="images/feature-img-1.png" width="50%" alt=""> 
