--- a/index.html
+++ b/index.html
@@ -70,16 +70,15 @@
 </section>
 <section id="features">
   <div class="container">
-    <div class="row feature design">
+    <div class="row feature design flat">
       <div class="three columns">
-        <div class="row flat">
-          <div class="col-lg-6 col-md-12 col-12">
+          <div class="col-lg-6 col-md-12 col-sm-12 col-12">
             <img src="images/feature-img-1.png" width="50%" alt=""> 
             <h4 style="text-align: auto;">XX XX（XXX　XXX）</h4>
             <!-- Designation --> 
             <span class="pos">XXXXXXXXXXXXXXXXXXXーXXXX</span>
           </div>
-          <div class="col-lg-6 col-md-12 col-12">
+          <div class="col-lg-6 col-md-12 col-sm-12 col-12">
             <ul class="plan plan1">
               <li class="plan-name">レッスン </li>
               <li style="text-align: left;"> <strong>レッスン対象：</strong> xxxxxxx </li>
@@ -89,8 +88,8 @@
               <li class="plan-action"> <a href="mailto:lizhen.training&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
             </ul>
           </div>
-        </div>
       </div>
+    </div>
   </div>
 </section>
 
