--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
     <div class="row feature design flat">
       <div class="three columns">
           <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-            <img src="images/feature-img-1.png" width="50%" alt=""> 
-            <h4 style="text-align: auto;">XX XX（XXX　XXX）</h4>
-            <!-- Designation --> 
-            <span class="pos">XXXXXXXXXXXXXXXXXXXーXXXX</span>
+            <div style="text-align: center;">
+              <img src="images/feature-img-1.png" width="60%" alt=""> 
+              <h4 style="text-align: auto;">XX XX（XXX　XXX）</h4>
+              <!-- Designation --> 
+              <span class="pos">XXXXXXXXXXXXXXXXXXXーXXXX</span>
+            </div>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 col-12">
             <ul class="plan plan1">
