--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="navbar-header">
         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a href="#" class="navbar-brand scroll-top logo"><b style="font-size: 30px;">xxxxxxxx</b></a> </div>
+        <a href="#" class="navbar-brand scroll-top logo"><b style="font-size: 30px;">氷の上で踊ってみませんか？</b></a> </div>
       <!--/.navbar-header-->
       <div id="main-nav" class="collapse navbar-collapse">
         <ul class="nav navbar-nav" id="mainNav">
@@ -72,24 +72,26 @@
   <div class="container">
     <div class="row feature design flat">
       <div class="three columns">
-          <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+          <div class="col-lg-5 col-md-12 col-sm-12 col-12">
             <div style="text-align: center;">
               <img src="images/feature-img-1.png" width="60%" alt=""> 
-              <h4 style="text-align: auto;">XX XX（XXX　XXX）</h4>
+              <h4 style="text-align: auto;">青木 青木（あおき　あおき）</h4>
               <!-- Designation --> 
-              <span class="pos">XXXXXXXXXXXXXXXXXXXーXXXX</span>
+              <span class="pos">青木アアギュアアアートアアアアラクター協会所属</span>
             </div>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+            <div style="text-align: center;">
             <ul class="plan plan1">
-              <li class="plan-name">レッスン </li>
-              <li style="text-align: left;"> <strong>レッスン対象：</strong> xxxxxxx </li>
-              <li style="text-align: left;"> <strong>レッスン内容：</strong> xxxxxxxxxxxxxxx</li>
-              <li style="text-align: left;"> <strong>参加する大会：</strong> xxxxxxx </li>
-              <li style="text-align: left;"> <strong>料金：</strong> xxxxxxxxx<br><br> </li>
+              <li class="plan-name">お習いについて</li>
+              <li style="text-align: left;"> <strong>レッスン対象：</strong> 小さな子供から大人の方まで </li>
+              <li style="text-align: left;"> <strong>レッスン内容：</strong> シングル全般：レベルに合わせた各種ステップ、スピン、ジャンプ</li>
+              <li style="text-align: left;"> <strong>参加する大会：</strong> 大会名 </li>
+              <li style="text-align: left;"> <strong>料金：</strong> ¥3500/30分<br><br> </li>
               <li class="plan-action"> <a href="mailto:lizhen.training&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
             </ul>
           </div>
+        </div>
       </div>
     </div>
   </div>
@@ -102,13 +104,13 @@
       <div class="row">
         <div class="heading text-center"> 
           <!-- Heading -->
-          <h2>お問合せを心より、お待ちしております。</h2>
+          <h3>お問合せを心より、お待ちしております。</h3>
           <p></p>
         </div>
         <div style="text-align: center;">
           <a href="https://www.edogawa-sportsland.com/" style="font-style: initial;color:lime;">xxxxxxx</a>
-          <h4 style="text-align: center;">住所:xxxxxxx</h4>
-          <h4 style="text-align: center;">メールアドレス:fffffff＠gmail.com</h4>
+          <h4 style="text-align: center;">住所:東京都江戸川区東篠崎1-8-1</h4>
+          <h4 style="text-align: center;">メールアドレス:abcdefgh12345＠gmail.com</h4>
         </div>
       </div>
     </div>
