--- a/index.html
+++ b/index.html
@@ -59,22 +59,27 @@
 <!--/.header-->
 <div id="#top"></div>
 <section id="home">
-  <div class="row">
-    <div class="col-lg-12 col-md-12 col-xs-12 col-12">
       <div class="banner-container"> <img src="images/banner-bg.jpg" alt="banner" />
         <div class="container banner-content">
-          <div class="hero-text animated fadeInDownBig">
-            <h1 class="responsive-headline" style="font-size: 40px;">aaaaBusiness Line - Responsive Template</h1>
-            <p>This is a Corporate template to showcase <br/>
-              your product and service.</p>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-xs-12 col-12">
+              <div class="hero-text animated fadeInDownBig">
+                <h1 class="responsive-headline" style="font-size: 40px;">vvvBusiness Line - Responsive Template</h1>
+                <p>This is a Corporate template to showcase <br/>
+                  your product and service.</p>
+              </div> 
+            </div>  
+          </div>  
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-xs-12 col-12">   
+              <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
+              <div class="hero-img"> 
+                <img src="images/homepage-1204-background-lapto.png" alt="" class="text-center animated fadeInUpBig"/>
+              </div>
+            </div>
           </div>
-          
-          <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
-          <div class="hero-img"> <img src="images/homepage-1204-background-lapto.png" alt="" class="text-center animated fadeInUpBig"/></div>
         </div>
       </div>
-    </div>
-  </div>
 </section>
 <section id="features">
   <div class="container">
