--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <section id="home">
       <div class="banner-container"> <img src="images/banner-bg.jpg" alt="banner" />
         <div class="container banner-content">
-          <div class="row">
+          <div class="row design">
             <div class="col-lg-12 col-md-12 col-xs-12 col-12">
               <div class="hero-text animated fadeInDownBig">
                 <h1 class="responsive-headline" style="font-size: 40px;">vvvBusiness Line - Responsive Template</h1>
@@ -75,6 +75,7 @@
               <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
               <div class="hero-img"> 
                 <img src="images/homepage-1204-background-lapto.png" alt="" class="text-center animated fadeInUpBig"/>
+                <p>fffff.</p>
               </div>
             </div>
           </div>
