--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <!--/.header-->
 <div id="#top"></div>
 <section id="home">
-      <div class="banner-container"> <img src="images/banner-bg.jpg" alt="banner" />
+      <div class="banner-container"> 
         <div class="container banner-content">
           <div class="row design">
             <div class="col-lg-12 col-md-12 col-xs-12 col-12">
@@ -73,8 +73,7 @@
           <div class="row">
             <div class="col-lg-12 col-md-12 col-xs-12 col-12">   
               <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
-              <div class="hero-img"> 
-                <p>fffff.</p>
+              <div class="hero-img"> <img src="images/homepage-1204-background-lapto.png" alt="" class="text-center animated fadeInUpBig"/>
               </div>
             </div>
           </div>
