--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="row design">
             <div class="col-lg-12 col-md-12 col-xs-12 col-12">
               <div class="hero-text animated fadeInDownBig">
-                <h1 class="responsive-headline" style="font-size: 40px;">vvvBusiness Line - Responsive Template</h1>
+                <h1 class="responsive-headline" style="font-size: 40px;">Business Line - Responsive Template</h1>
                 <p>This is a Corporate template to showcase <br/>
                   your product and service.</p>
               </div> 
