--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           <div class="row">
             <div class="col-lg-12 col-md-12 col-xs-12 col-12">   
               <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
-              <div class="hero-img"> <img src="images/homepage-1204-background-lapto.png" alt="" class="text-center animated fadeInUpBig"/>
+              <div>
+                <p>BBBBBBBBBBBBBBBBBBBBB </p>
               </div>
             </div>
           </div>
