--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
           <div class="row">
             <div class="col-lg-12 col-md-12 col-xs-12 col-12">   
               <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
-              <div>
-                <p>BBBBBBBBBBBBBBBBBBBBB </p>
+              <div> <img src="images/homepage-1204-background-lapto.png"/>
               </div>
             </div>
           </div>
