--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="col-lg-12 col-md-12 col-xs-12 col-12">
               <div class="hero-text animated fadeInDownBig">
                 <h1 class="responsive-headline" style="font-size: 40px;">Business Line - Responsive Template</h1>
-                <p>This is a Corporate template to showcase <br/>
+                <p>ssssssssssThis is a Corporate template to showcase <br/>
                   your product and service.</p>
               </div> 
             </div>  
@@ -73,7 +73,7 @@
           <div class="row">
             <div class="col-lg-12 col-md-12 col-xs-12 col-12">   
               <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
-              <div class="hero-img"> <img src="images/homepage-1204-background-lapto.png" alt="" class="text-center animated fadeInUpBig"/>
+              <div style="text-align: center;"> <img src="images/homepage-1204-background-lapto.png" alt="" class="text-center animated fadeInUpBig"/>
               </div>
             </div>
           </div>
