--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p>xxxxxxxxxの基礎から親切丁寧に楽しく指導致します。</p>
       </div>      
       <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
-      <div class="hero-img"> <img src="images/homepage-1204-background-lapto.png" width="22%" height="22%" alt="" class="text-center animated fadeInUpBig"/></div>
+      <div style="text-align: center;"> <img src="images/homepage-1204-background-lapto.png" width="22%" height="22%" alt="" class="text-center animated fadeInUpBig"/></div>
     </div>
   </div>
 </section>
