--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="navbar-header">
         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a href="#" class="navbar-brand scroll-top logo"><b style="font-size: 55%;">氷の上で踊っ</b></a> </div>
+        <a href="#" class="navbar-brand scroll-top logo"><b style="font-size: 55%;">氷の上で踊ってみませんか？</b></a> </div>
       <!--/.navbar-header-->
       <div id="main-nav" class="collapse navbar-collapse">
         <ul class="nav navbar-nav" id="mainNav">
@@ -56,7 +56,7 @@
 <!--/.header-->
 <div id="#top"></div>
 <section id="home">
-  <div class="banner-container"> <img src="images/banner-bg.jpg" alt="banner" />
+  <div class="banner-container">
     <div class="container banner-content">
       <div class="hero-text animated fadeInDownBig">
         <h1 class="responsive-headline" style="font-size: 40px;color:thistle;">XXXXXXXXXXXX</h1>
