--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
     </div>
   </div>
 </section>
+ßßß
 <section id="features">
   <div class="container">
     <div class="row feature design flat">
       <div class="three columns">
-          <div class="col-lg-5 col-md-12 col-sm-12 col-12">
+          <div class="col-lg-5 col-md-5 col-sm-12 col-12">
             <div style="text-align: center;">
               <img src="images/feature-img-1.png" width="60%" alt=""> 
               <h4 style="text-align: auto;">青木 青木（あおき　あおき）</h4>
@@ -79,7 +80,7 @@
               <span class="pos">青木アアギュアアアートアアアアラクター協会所属</span>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-12">
             <div style="text-align: center;">
             <ul class="plan plan1">
               <li class="plan-name">お習いについて</li>
