--- a/index.html
+++ b/index.html
@@ -58,16 +58,24 @@
 <section id="home">
   <div class="banner-container">
     <div class="container banner-content">
-      <div class="hero-text animated fadeInDownBig">
-        <h1 class="responsive-headline" style="font-size: 40px;color:thistle;">XXXXXXXXXXXX</h1>
-        <p>xxxxxxxxxの基礎から親切丁寧に楽しく指導致します。</p>
-      </div>      
-      <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
-      <div style="text-align: center;"> <img src="images/homepage-1204-background-lapto.png" width="22%" height="22%" alt="" class="text-center animated fadeInUpBig"/></div>
+      <div class="row design">
+        <div class="col-lg-12 col-md-12 col-xs-12 col-12">
+            <div class="hero-text animated fadeInDownBig">
+              <h1 class="responsive-headline" style="font-size: 40px;color:thistle;">XXXXXXXXXXXX</h1>
+              <p>xxxxxxxxxの基礎から親切丁寧に楽しく指導致します。</p>
+            </div>
+        </div>
+      </div>  
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12 col-12">       
+          <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
+          <div style="text-align: center;"> <img src="images/homepage-1204-background-lapto.png" width="22%" height="22%" alt="" class="text-center animated fadeInUpBig"/></div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
-ßßß
+
 <section id="features">
   <div class="container">
     <div class="row feature design flat">
