--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <div class="row design">
         <div class="col-lg-12 col-md-12 col-xs-12 col-12">
             <div class="hero-text animated fadeInDownBig">
-              <h1 class="responsive-headline" style="font-size: 40px;color:thistle;">XXXXXXXXXXXX</h1>
-              <p>xxxxxxxxxの基礎から親切丁寧に楽しく指導致します。</p>
+              <h1 class="responsive-headline" style="font-size: 4em;color:thistle;">江戸川スポーツランドフィギュアスケートクラブ</h1>
+              <p>楽しい！スケート！</p>
             </div>
         </div>
       </div>  
