--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="row design">
         <div class="col-lg-12 col-md-12 col-xs-12 col-12">
             <div class="hero-text animated fadeInDownBig">
-              <h1 class="responsive-headline" style="font-size: 4em;color:thistle;">江戸川スポーツランドフィギュアスケートクラブ</h1>
+              <h1 class="responsive-headline">江戸川スポーツランドフィギュアスケートクラブ</h1>
               <p>楽しい！スケート！</p>
             </div>
         </div>
