--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-lg-6 col-md-7 col-sm-12 col-12">
             <div style="text-align: center;">
             <ul class="plan plan1">
-              <li class="plan-name">お習いについて</li>
+              <li class="plan-name">基礎から丁寧に指導</li>
               <li style="text-align: left;"> <strong>レッスン対象：</strong> 小さな子供から大人の方まで </li>
               <li style="text-align: left;"> <strong>レッスン内容：</strong> シングル全般：レベルに合わせた各種ステップ、スピン、ジャンプ</li>
               <li style="text-align: left;"> <strong>参加する大会：</strong> 大会名 </li>
