--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <ul class="plan plan1">
               <li class="plan-name">基礎から丁寧に指導</li>
               <li style="text-align: left;"> <strong>レッスン対象：</strong> 小さな子供から大人の方まで </li>
-              <li style="text-align: left;"> <strong>レッスン内容：</strong> シングル全般：レベルに合わせた各種ステップ、スピン、ジャンプ</li>
+              <li style="text-align: left;"> <strong>レッスン内容：</strong> シングル全般ーレベルに合わせた各種ステップ、スピン、ジャンプ</li>
               <li style="text-align: left;"> <strong>参加する大会：</strong> 大会名 </li>
               <li style="text-align: left;"> <strong>料金：</strong> ¥3500/30分<br><br> </li>
               <li class="plan-action"> <a href="mailto:lizhen.training&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
