--- a/index_all_black.html
+++ b/index_all_black.html
@@ -33,24 +33,19 @@
 </head>
 
 <body>
-  <section id="home">
-    <div class="banner-container">
-      <div class="hero-text animated fadeInDownBig">
-        <h1 class="responsive-headline" style="color:#f49500">あい　うえ</h1>
-        <p>あああああああああクラブでフィギュアああーあをああああああああ？</p>
-      </div>   
-    </div>
-  </section>
 <section id="features">
     <div class="container">
+      <div class="hero-text animated fadeInDownBig">
+        <h1 class="responsive-headline">岩間　三恵</h1>
+        <p>江戸川スポーツランドクラブでフィギュアスケートを習ってみませんか？</p>
+      </div>      
+
       <div class="row feature design flat">
         <div class="col-lg-3 col-md-3 col-xs-4 col-4">
-          <div style="text-align: center;">
-            <img src="images/feature-img-1.png" width="80%" alt=""> 
-            <span class="pos">日本フィギュアスケート<br>インストラクター協会所属</span>
-          </div>
+          <img src="/feature-img-1.png" width="100%" alt=""> 
+          <span class="pos">日本フィギュアスケート<br>インストラクター協会所属</span>
         </div>
-        <div class="col-lg-5 col-md-5 col-xs-8 col-8">
+        <div class="col-lg-5 col-md-5 col-xs-5 col-5">
           <h3></h3>
           <p style="color: #FFFFFF; font-size: larger;">    
               江戸川スポーツランドクラブのインストラクターは全員、日本フィギュアスケート協会に所属し、元全日本選手
@@ -62,10 +57,10 @@
         <div class="col-lg-4 col-md-4 col-xs-12 col-12">
           <ul class="plan plan1">
             <li class="plan-name">レッスンについて </li>
-            <li style="text-align: left;"> <strong>料金：</strong> ¥xxxxxxxあ </li>
+            <li style="text-align: left;"> <strong>料金：</strong> ¥3500/30分 </li>
             <li style="text-align: left;"> <strong>場所：</strong> <a style="color:chocolate" href="https://www.edogawa-sportsland.com/skate/skate1/">江戸川スポーツランドスケートリンク</a> </li>
-            <li style="text-align: left;"> <strong>連絡先：</strong> aaaaaaaaaaaaa＠xxxxx.com</li>
-            <li class="plan-action"> <a href="mailto:aaaaaaaaaaaaa&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
+            <li style="text-align: left;"> <strong>連絡先：</strong> mimichanskate＠gmail.com</li>
+            <li class="plan-action"> <a href="mailto:mimichanskate&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
           </ul>
         </div>
       </div>
