--- a/index_20211228.html
+++ b/index_20211228.html
@@ -59,7 +59,7 @@
   <div class="banner-container"> <img src="images/banner-bg.jpg" alt="banner" />
     <div class="container banner-content">
       <div class="hero-text animated fadeInDownBig">
-        <h1 class="responsive-headline" style="font-size: 40px;color:thistle;">江戸川スポーツランドフィギュアスケートクラブ</h1>
+        <h1 class="responsive-headline" style="font-size: 40px;color:thistle;">岩間　三恵</h1>
         <p>フィギュアスケートの基礎から親切丁寧に楽しく指導致します。</p>
       </div>      
       <!-- <a class="hero-button learn-more smoothscroll text-center" href="#features">Learn More</a>-->
