--- a/index.html
+++ b/index.html
@@ -33,39 +33,38 @@
 </head>
 
 <body>
-  <section id="home">
+<section id="home">
     <div class="banner-container">
       <div class="hero-text animated fadeInDownBig">
-        <h1 class="responsive-headline" style="color:#f49500">あい　うえ</h1>
-        <p>あああああああああクラブでフィギュアああーあをああああああああ？</p>
+        <h1>ああ　ああ（aaaaa aaaaaa）</h1>
+        <p>あああああーああああああああ<br>ああああああああああ習っああああああ？</p>
       </div>   
     </div>
-  </section>
+</section>
 <section id="features">
     <div class="container">
       <div class="row feature design flat">
-        <div class="col-lg-3 col-md-3 col-xs-4 col-4">
+        <div class="col-lg-3 col-md-3 col-xs-3 col-3">
           <div style="text-align: center;">
-            <img src="images/feature-img-1.png" width="80%" alt=""> 
-            <span class="pos">日本フィギュアスケート<br>インストラクター協会所属</span>
+            <img class="images" src="images/feature-img-1.png" alt=""> 
+            <span class="pos">日本ああュあああああ<br>イあストあああーああああ</span>
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-xs-8 col-8">
-          <h3></h3>
-          <p style="color: #FFFFFF; font-size: larger;">    
-              江戸川スポーツランドクラブのインストラクターは全員、日本フィギュアスケート協会に所属し、元全日本選手
+        <div class="col-lg-5 col-md-5 col-xs-9 col-11">
+          <p>    
+              ああああポーあラあドあラあのインストラクターは全員、日本フィギュアスケート協会に所属し、元全日本選手
               や日本体育協会公認コーチなど経験豊富なスタッフがスケートを教えています。
               小さなお子様から大人の方まで幅広いレベルに合わせた個人レッスン及びグループレッスンで確実な技術の向上を
               目指しています。
-            </p>
+          </p>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 col-12">
-          <ul class="plan plan1">
+        <div class="col-lg-4 col-md-4 col-xs-11 col-11">
+          <ul class="plan">
             <li class="plan-name">レッスンについて </li>
-            <li style="text-align: left;"> <strong>料金：</strong> ¥xxxxxxxあ </li>
-            <li style="text-align: left;"> <strong>場所：</strong> <a style="color:chocolate" href="https://www.edogawa-sportsland.com/skate/skate1/">江戸川スポーツランドスケートリンク</a> </li>
-            <li style="text-align: left;"> <strong>連絡先：</strong> aaaaaaaaaaaaa＠xxxxx.com</li>
-            <li class="plan-action"> <a href="mailto:aaaaaaaaaaaaa&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
+            <li style="text-align: left;"> <strong>ああ：</strong> ¥xxxx/xx分 </li>
+            <li style="text-align: left;"> <strong>ああ：</strong> <a style="color:chocolate" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">江戸川スポーツランドスケートリンク</a> </li>
+            <li style="text-align: left;"> <strong>あああ：</strong> aaaaaaaaaaaaa＠gmail.com</li>
+            <li class="plan-action"> <a href="mailto:xxxxxxxxxxx&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
           </ul>
         </div>
       </div>
@@ -74,10 +73,10 @@
 
 
 <!--/.page-section-->
-<section class="copyright">
+<section >
   <div class="container">
-    <div class="row">
-      <div class="col-sm-12 text-center"> Copyright 2014 | All Rights Reserved -- Template by <a href="http://webThemez.com">WebThemez.com</a> </div>
+    <div class="row copyright">
+      <footer class="col-sm-12 text-center"> Copyright 2014 | All Rights Reserved -- Template by <a href="http://webThemez.com">WebThemez.com</a> </footer>
     </div>
     <!-- / .row --> 
   </div>
