--- a/index.html
+++ b/index.html
@@ -37,21 +37,23 @@
 <section id="home">
     <div class="banner-container">
       <div class="hero-text animated fadeInDownBig">
-        <h1>ああ　ああ（aaaaa aaaaaa）</h1>
-        <p>あああああーああああああああ<br>ああああああああああ習っああああああ？</p>
+        <h1>先生のお名前　（Iaaaa Maaaaa）</h1>
+        <p>あああスポーツランドクラブで<br>フィギュアあああを習ってみませんか？</p>
       </div>   
     </div>
 </section>
 <section id="features">
     <div class="container">
       <div class="row feature design flat">
-        <div class="col-lg-3 col-md-3 col-xs-3 col-3">
+        <div class="col-lg-3 col-md-3 col-xs-4 col-4">
+          <p style="visibility:hidden"> hidden<p></p>
           <div style="text-align: center;">
             <img class="images" src="images/feature-img-1.png" alt=""> 
-            <span class="pos">日本ああュあああああ<br>イあストあああーああああ</span>
+            <span class="pos">日本ああュあああああイあストあああーああああ</span>
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-xs-9 col-11">
+        <div class="col-lg-5 col-md-5 col-xs-8 col-8">
+          <p style="visibility:hidden"> hidden<p></p>
           <p>    
               ああああポーあラあドあラあのインストラクターはあああああああああああーあああにああし、ああああああ
               やああああああああーあああああああああああああーあっっっっっっっっz。
@@ -59,7 +61,8 @@
               ああああああああああああああああああああああ。
           </p>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-11 col-11">
+        <div class="col-lg-4 col-md-4 col-xs-12 col-12">
+          <p style="visibility:hidden"> hidden<p>
           <ul class="plan">
             <li class="plan-name">レッスンについて </li>
             <li style="text-align: left;"> <strong>料金：</strong> ¥xxxx/xxx </li>
