--- a/index_ok.html
+++ b/index_ok.html
@@ -34,11 +34,13 @@
 
 <body>
 <section id="features">
-    <div class="container">
-      <div class="hero-text animated fadeInDownBig">
-        <p>江戸川スポーツランドクラブで<br>フィギュアスケートを習ってみませんか？</p>
-      </div>      
-
+    <div class="container">     
+      <div class="banner-container">
+        <div class="hero-text animated fadeInDownBig">
+          <h1>岩間　三恵（Iwama Mitsue）</h1>
+          <p>フィギュアスケートを習ってみませんか？</p>
+        </div>   
+      </div>
       <div class="row feature design flat">
         <div class="col-lg-3 col-md-3 col-xs-5 col-5">
           <p style="visibility:hidden"> hidden<p></p>
@@ -49,7 +51,7 @@
         <div class="col-lg-5 col-md-5 col-xs-7 col-7">
             <p style="visibility:hidden"> hidden<p></p>
             <p>    
-              インストラクター岩間三恵(Iwama Mitsue)が江戸川スポーツランドクラブでフィギュアスケートを教えています。
+              日本フィギュアスケートインストラクター協会に所属し、江戸川スポーツランドクラブでフィギュアスケートを教えています。
               <br>就学前のお子様から選手を目指す方、大人だけど滑ってみたい方など、フィギュアスケートを習いたい方々の様々な想いに応えます！
               <br><br>
               お問い合わせだけでも結構です。ぜひ、お気軽にご連絡ください。
