--- a/index copy.html
+++ b/index copy.html
@@ -12,7 +12,7 @@
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-<title>ああああ あああスポーツランドああああああクラブ</title>
+<title>岩間三恵 江戸川スポーツランドフィギュアスケートクラブ</title>
 <meta name="description" content="">
 <meta name="author" content="WebThemez">
 <!--[if lt IE 9]>
@@ -37,8 +37,27 @@
     <div class="container">     
       <div class="banner-container">
         <div class="hero-text animated fadeInDownBig">
-          <h1>ああ　ああ（abcde abcdef）</h1>
-          <p>フィギュアあああを習ってみませんか？</p>
+          <div class="row flat">
+            <div class="col-lg-1 col-md-1 col-xs-5 col-5">
+                <h1>岩</h1>
+            </div>
+            <div class="col-lg-1 col-md-1 col-xs-5 col-5">
+              <h1>間</h1>
+            </div>
+            <div class="col-lg-1 col-md-1 col-xs-5 col-5">
+              <h1>三</h1>
+            </div>
+            <div class="col-lg-1 col-md-1 col-xs-5 col-5">
+              <h1>恵</h1>
+            </div>
+            <div class="col-lg-6 col-md-8 col-xs-5 col-5">
+              <h2>(Iwama　Mitsue</h2>
+            </div>
+            <div class="col-lg-2 col-md-8 col-xs-5 col-5">
+              <h2>Mitsue)</h2>
+            </div>
+          </div>
+          <p>フィギュアスケートを習ってみませんか？</p>
         </div>   
       </div>
       <div class="row feature design flat">
@@ -51,7 +70,7 @@
         <div class="col-lg-5 col-md-5 col-xs-7 col-7">
             <p style="visibility:hidden"> hidden<p></p>
             <p>    
-              日本フィギュアスケートインストラクター協会に所属し、あああスポーツランドクラブでフィギュアスケートを教えています。
+              日本フィギュアスケートインストラクター協会に所属し、江戸川スポーツランドクラブでフィギュアスケートを教えています。
               <br>就学前のお子様から選手を目指す方、大人だけど滑ってみたい方など、フィギュアスケートを習いたい方々の様々な想いに応えます！
               <br><br>
               お問い合わせだけでも結構です。ぜひ、お気軽にご連絡ください。
@@ -62,9 +81,9 @@
           <ul class="plan">
             <li class="plan-name">レッスンについて </li>
             <li style="text-align: left;"> <strong>料金：</strong> ¥3500/30分 </li>
-            <li style="text-align: left;"> <strong>場所：</strong> <a style="color:chocolate" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">あああスポーあランド</a> </li>
-            <li style="text-align: left;"> <strong>連絡先：</strong>xxxxxxxxxxxx＠gmail.com</li>
-            <li class="plan-action"> <a href="mailto:xxxxxxxxxxx&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
+            <li style="text-align: left;"> <strong>場所：</strong> <a style="color:chocolate" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">江戸川スポーツランド</a> </li>
+            <li style="text-align: left;"> <strong>連絡先：</strong> mimichanskate＠gmail.com</li>
+            <li class="plan-action"> <a href="mailto:mimichanskate&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
           </ul>
         </div>
       </div>
