--- a/index_not_good.html
+++ b/index_not_good.html
@@ -27,44 +27,48 @@
 <link href="css/animate.css" rel="stylesheet" media="screen">
 <!-- Owl Carousel Assets -->
 <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
-<link rel="stylesheet" href="css/styles.css" />
+<link rel="stylesheet" href="css/styles_not_good.css" />
 <!-- Font Awesome -->
 <link href="font/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
-<section id="features">
+<section id="features" >　
     <div class="container">     
-      <div class="banner-container">
+      <div class="">
         <div class="hero-text animated fadeInDownBig">
+          <h1>インストラクター</h1>>
           <h1>岩間　三恵（Iwama Mitsue）</h1>
           <p>フィギュアスケートを習ってみませんか？</p>
         </div>   
       </div>
       <div class="row feature design flat">
-        <div class="col-lg-3 col-md-3 col-xs-5 col-5">
+        <div class="col-lg-3 col-md-3 col-xs-3 col-3">
           <p style="visibility:hidden"> hidden<p></p>
           <div style="text-align: center;">
             <img class="images" src="images/feature-img-1.png" alt=""> 
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-xs-7 col-7">
+        <div class="col-lg-5 col-md-5 col-xs-9 col-9">
             <p style="visibility:hidden"> hidden<p></p>
-            <p>    
-              日本フィギュアスケートインストラクター協会に所属し、江戸川スポーツランドクラブでフィギュアスケートを教えています。
+            <p> 
+              日本スケート連盟バッジテスト 7級
+              <br>
+              日本フィギュアスケートインストラクター協会会員
+              <br>   
+              江戸川スポーツランドクラブでフィギュアスケートを教えています。
               <br>就学前のお子様から選手を目指す方、大人だけど滑ってみたい方など、フィギュアスケートを習いたい方々の様々な想いに応えます！
-              <br><br>
-              お問い合わせだけでも結構です。ぜひ、お気軽にご連絡ください。
+              <p>お問い合わせだけでも結構です。ぜひ、お気軽にご連絡ください。</p>
+              <a href="mailto:mimichanskate&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg button">お問い合わせ</a>
           </p>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-12 col-12">
           <p style="visibility:hidden"> hidden<p>
           <ul class="plan">
             <li class="plan-name">レッスンについて </li>
-            <li style="text-align: left;"> <strong>料金：</strong> ¥3500/30分 </li>
+            <li style="text-align: left;"> <strong>個人レッスン料金：</strong> 30分/¥3500 </li>
             <li style="text-align: left;"> <strong>場所：</strong> <a style="color:chocolate" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">江戸川スポーツランド</a> </li>
-            <li style="text-align: left;"> <strong>連絡先：</strong> mimichanskate＠gmail.com</li>
-            <li class="plan-action"> <a href="mailto:mimichanskate&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
+            <li style="text-align: left;"> <strong>連絡先：</strong> mimichanskate＠gmail.com<br><p style="visibility:hidden"> hidden<p></p></li>
           </ul>
         </div>
       </div>
