--- a/index_version2.html
+++ b/index_version2.html
@@ -12,7 +12,7 @@
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-<title>岩間三恵 江戸川スポーツランドスケートクラブ</title>
+<title>岩間三恵 江戸川スポーツランドフィギュアスケートクラブ</title>
 <meta name="description" content="">
 <meta name="author" content="WebThemez">
 <!--[if lt IE 9]>
@@ -27,48 +27,54 @@
 <link href="css/animate.css" rel="stylesheet" media="screen">
 <!-- Owl Carousel Assets -->
 <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
-<link rel="stylesheet" href="css/styles.css" />
+<link rel="stylesheet" href="css/styles_version2_black.css" />
 <!-- Font Awesome -->
 <link href="font/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
-<div class="wrapper">
-<section id="home">
-    <div class="banner-container">
-      <div class="hero-text animated fadeInDownBig">
-        <h1>岩間　三恵（Iwama Mitsue）</h1>
-        <p>フィギュアスケートを習ってみませんか？</p>
-      </div>   
-    </div>
-</section>
-<section id="features">
-    <div class="container">
+<section id="features" >　
+    <div class="container">     
+      <div class="">
+        <div class="hero-text animated fadeInDownBig">
+          <h1>インストラクター</h1>
+          <br>
+          <h1>岩間　三恵（Iwama Mitsue）</h1>
+          <p>フィギュアスケートを習ってみませんか？</p>
+        </div>   
+      </div>
       <div class="row feature design flat">
-        <div class="col-lg-3 col-md-3 col-xs-4 col-4">
-          <p style="visibility:hidden"> hidden<p></p>
+        <div class="col-lg-3 col-md-3 col-xs-3 col-3">
           <div style="text-align: center;">
+            <p style="visibility:hidden"> hidden<p> 
             <img class="images" src="images/feature-img-1.png" alt=""> 
-            <span class="pos">日本フィギュアスケートインストラクター協会所属</span>
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-xs-8 col-8">
-          <p style="visibility:hidden"> hidden<p></p>
-          <p>    
-            江戸川スポーツランドクラブでフィギュアスケートを教えています。
-            <br>就学前のお子様から選手を目指す方、大人だけど滑ってみたい方など、フィギュアスケートを習いたい方々の様々な想いに応えます！
+        <div class="col-lg-5 col-md-5 col-xs-9 col-9">
+          <p style="visibility:hidden"> hidden<p>            
+          <p>             
+            日本フィギュアスケートインストラクター協会会員
+            <br>
+            日本スケート連盟バッジテスト 7級
+            <br>
+            指導歴： 16年
             <br><br>
-            お問い合わせだけでも結構です。ぜひ、お気軽にご連絡ください。
-        </p>
+            江戸川スポーツランドクラブでフィギュアスケートを教えています。
+            就学前のお子様から選手を目指す方、大人だけど滑ってみたい方など、フィギュアスケートを習いたい方々の様々な想いに応えます！
+          </p>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-12 col-12">
-          <p style="visibility:hidden"> hidden<p>
+          <p style="visibility:hidden"> hidden<p>            
           <ul class="plan">
             <li class="plan-name">レッスンについて </li>
-            <li style="text-align: left;"> <strong>料金：</strong> ¥3500/30分 </li>
+            <li style="text-align: left;"> <strong>個人レッスン料金：</strong> 30分/¥3500 </li>
             <li style="text-align: left;"> <strong>場所：</strong> <a style="color:chocolate" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">江戸川スポーツランド</a> </li>
-            <li style="text-align: left;"> <strong>連絡先：</strong> mimichanskate＠gmail.com</li>
-            <li class="plan-action"> <a href="mailto:mimichanskate&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
+            <li style="text-align: left;"> <strong>指導言語（Language）：</strong> 日本語、English</li>
+            <li style="text-align: left;"> <strong>連絡先：</strong> mitsueiwamaskate＠gmail.com</li>
+            <li style="text-align: left;">
+                    お問い合わせだけでも結構です。ぜひ、お気軽にご連絡ください。<br>
+            </li>
+            <li class="plan-action"> <a href="mailto:mitsueiwamaskate&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
           </ul>
         </div>
       </div>
@@ -79,13 +85,12 @@
 <!--/.page-section-->
 <section class="copyright">
   <div class="container">
-    <div class="row copyright">
+    <div class="row">
       <div class="col-sm-12 text-center"> Copyright 2014 | All Rights Reserved -- Template by <a href="http://webThemez.com">WebThemez.com</a> </div>
     </div>
     <!-- / .row --> 
   </div>
 </section>
-<a href="#top" class="topHome"><i class="fa fa-chevron-up fa-2x"></i></a> 
 
 <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]--> 
 <script src="js/modernizr-latest.js"></script> 
@@ -98,6 +103,5 @@
 <script src="js/waypoints.js"></script> 
 <script src="js/custom.js" type="text/javascript"></script> 
 <script src="js/owl-carousel/owl.carousel.js"></script>
-</div>
 </body>
 </html>
