--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <div class="container">     
       <div class="">
         <div class="hero-text animated fadeInDownBig">
-          <h1>xxxxxxxxxxxxxx</h1>
+          <h1>インストラクター</h1>
           <br>
           <h1>XX　XX（XXXXX XXXXXX）</h1>
-          <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+          <p>フィギュアスケートを習ってみませんか？</p>
         </div>   
       </div>
       <div class="row feature design flat">
