--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="hero-text animated fadeInDownBig">
           <h1>インストラクター</h1>
           <br>
-          <h1>XX　XX（XXXXX XXXXXX）</h1>
+          <h1>岩間　三恵（Iwama Mitsue）</h1>
           <p>フィギュアスケートを習ってみませんか?</p>
         </div>   
       </div>
