--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <div class="container">     
       <div class="">
         <div class="hero-text animated fadeInDownBig">
-          <h1>インストラクター</h1>
+          <div class="instructor">
+            <h1>インストラクター</h1>
+          </div>
           <br>
           <h1>岩間　三恵（Iwama Mitsue）</h1>
           <p>フィギュアスケートを習ってみませんか?</p>
@@ -51,7 +53,9 @@
         </div>
         <div class="col-lg-8 col-md-8 col-xs-9 col-9 pSmaller">
           <p>    
-            <br>         
+            <br>   
+            日本スポーツ協会公認スポーツ指導者 スケートコーチ
+            <br>
             日本フィギュアスケートインストラクター協会会員
             <br>
             日本スケート連盟バッジテスト 7級
