--- a/index_white_goog.html
+++ b/index_white_goog.html
@@ -12,7 +12,7 @@
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-<title>岩間三恵 インストラクター 江戸川スポーツランドフィギュアスケートクラブ </title>
+<title>XXXX XXXXXXXXXXXXXXXXXXXXXXXXxx</title>
 <meta name="description" content="">
 <meta name="author" content="WebThemez">
 <!--[if lt IE 9]>
@@ -27,7 +27,7 @@
 <link href="css/animate.css" rel="stylesheet" media="screen">
 <!-- Owl Carousel Assets -->
 <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
-<link rel="stylesheet" href="css/styles_black.css" />
+<link rel="stylesheet" href="css/styles_version2_white.css" />
 <!-- Font Awesome -->
 <link href="font/css/font-awesome.min.css" rel="stylesheet">
 </head>
