--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <ul class="plan">
             <li class="plan-name">レッスンについて </li>
             <li style="text-align: left;"> <strong>個人レッスン料金：</strong> 30分/¥3500 </li>
-            <li style="text-align: left;"> <strong>場所：</strong> <a style="color:#ec76e6" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">江戸川スポーツランド</a> </li>
+            <li style="text-align: left;"> <strong>場所：</strong> <a style="color:#006400" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">江戸川スポーツランド</a> </li>
             <li style="text-align: left;"> <strong>指導言語：</strong> 日本語、英語</li>
             <li style="text-align: left;"> <strong>連絡先：</strong> mitsueiwamaskate＠gmail.com</li>
             <li style="text-align: left;">
